--- a/ShanShan_notebooks/data_modeling_and_evaluation.ipynb
+++ b/ShanShan_notebooks/data_modeling_and_evaluation.ipynb
@@ -383,21 +383,212 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Text Cleaning: Remove unnecessary characters, normalize, and clean text data."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "# Download stopwords\n",
+    "import nltk\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('wordnet')\n",
+    "\n",
+    "# Define text cleaning function\n",
+    "def clean_text(text):\n",
+    "    # Remove punctuation, convert to lowercase, and remove stopwords\n",
+    "    text = re.sub(r'\\W', ' ', text)\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r'\\s+', ' ', text)\n",
+    "    text = re.sub(r'\\d+', '', text)\n",
+    "    \n",
+    "    # Remove stopwords\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    words = text.split()\n",
+    "    words = [word for word in words if word not in stop_words]\n",
+    "    \n",
+    "    # Lemmatize words\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    words = [lemmatizer.lemmatize(word) for word in words]\n",
+    "    \n",
+    "    return ' '.join(words)\n",
+    "\n",
+    "# Apply to the 'text_' column\n",
+    "df_fake_reviews['cleaned_text'] = df_fake_reviews['text_'].apply(clean_text)\n",
+    "df_yelp_reviews['cleaned_review'] = df_yelp_reviews['Review'].apply(clean_text)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Feature Engineering: Create additional features such as review length, number of exclamation marks, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Review length\n",
+    "df_fake_reviews['review_length'] = df_fake_reviews['cleaned_text'].apply(lambda x: len(x.split()))\n",
+    "df_yelp_reviews['review_length'] = df_yelp_reviews['cleaned_review'].apply(lambda x: len(x.split()))\n",
+    "\n",
+    "# Number of exclamation marks\n",
+    "df_fake_reviews['exclamation_count'] = df_fake_reviews['text_'].apply(lambda x: x.count('!'))\n",
+    "df_yelp_reviews['exclamation_count'] = df_yelp_reviews['Review'].apply(lambda x: x.count('!'))\n",
+    "\n",
+    "# Visualize review length\n",
+    "sns.histplot(df_fake_reviews['review_length'], bins=50)\n",
+    "plt.title(\"Review Length Distribution in Fake Reviews\")\n",
+    "plt.show()\n",
+    "\n",
+    "sns.histplot(df_yelp_reviews['review_length'], bins=50)\n",
+    "plt.title(\"Review Length Distribution in Yelp Reviews\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "The Yelp dataset already contains spam labels (Spam(1) and Not Spam(0)), while the Fake Reviews dataset uses CG in the label.\n",
+    "\n",
+    "Fake Reviews Labeling:\n",
+    "# Convert 'CG' label into binary label (e.g., CG as 1 for fake, else 0)\n",
+    "df_fake_reviews['label'] = df_fake_reviews['label'].apply(lambda x: 1 if x == 'CG' else 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Prepare Data for Modeling:\n",
+    "\n",
+    "Use TF-IDF to vectorize the cleaned review text.\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# Vectorize the text data\n",
+    "vectorizer = TfidfVectorizer(max_features=5000)\n",
+    "X_fake = vectorizer.fit_transform(df_fake_reviews['cleaned_text']).toarray()\n",
+    "X_yelp = vectorizer.fit_transform(df_yelp_reviews['cleaned_review']).toarray()\n",
+    "\n",
+    "# Define the target labels\n",
+    "y_fake = df_fake_reviews['label']\n",
+    "y_yelp = df_yelp_reviews['Spam(1) and Not Spam(0)']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Train-Test Split:\n",
+    "# Split the data into training and testing sets\n",
+    "X_train_fake, X_test_fake, y_train_fake, y_test_fake = train_test_split(X_fake, y_fake, test_size=0.2, random_state=42)\n",
+    "X_train_yelp, X_test_yelp, y_train_yelp, y_test_yelp = train_test_split(X_yelp, y_yelp, test_size=0.2, random_state=42)\n",
+    "\n",
+    "Train a Logistic Regression Model:\n",
+    "\n",
+    "# Train a Logistic Regression Model\n",
+    "model_fake = LogisticRegression()\n",
+    "model_fake.fit(X_train_fake, y_train_fake)\n",
+    "\n",
+    "model_yelp = LogisticRegression()\n",
+    "model_yelp.fit(X_train_yelp, y_train_yelp)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Step 5: Model Evaluation and Tuning\n",
+    "Evaluate Model Performance:\n",
+    "\n",
+    "# Predictions for Fake Reviews\n",
+    "y_pred_fake = model_fake.predict(X_test_fake)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "print(\"Accuracy (Fake Reviews):\", accuracy_score(y_test_fake, y_pred_fake))\n",
+    "print(\"Precision (Fake Reviews):\", precision_score(y_test_fake, y_pred_fake))\n",
+    "print(\"Recall (Fake Reviews):\", recall_score(y_test_fake, y_pred_fake))\n",
+    "print(\"F1 Score (Fake Reviews):\", f1_score(y_test_fake, y_pred_fake))\n",
+    "print(\"ROC AUC (Fake Reviews):\", roc_auc_score(y_test_fake, y_pred_fake))\n",
+    "\n",
+    "# Predictions for Yelp Reviews\n",
+    "y_pred_yelp = model_yelp.predict(X_test_yelp)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "print(\"Accuracy (Yelp Reviews):\", accuracy_score(y_test_yelp, y_pred_yelp))\n",
+    "print(\"Precision (Yelp Reviews):\", precision_score(y_test_yelp, y_pred_yelp))\n",
+    "print(\"Recall (Yelp Reviews):\", recall_score(y_test_yelp, y_pred_yelp))\n",
+    "print(\"F1 Score (Yelp Reviews):\", f1_score(y_test_yelp, y_pred_yelp))\n",
+    "print(\"ROC AUC (Yelp Reviews):\", roc_auc_score(y_test_yelp, y_pred_yelp))\n",
+    "\n",
+    "Hyperparameter Tuning: Use grid search for hyperparameter tuning:\n",
+    "\n",
+    "\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = {'C': [0.1, 1, 10, 100], 'penalty': ['l2']}\n",
+    "grid_search = GridSearchCV(LogisticRegression(), param_grid, cv=5)\n",
+    "grid_search.fit(X_train_fake, y_train_fake)\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Step 6: Reporting and Visualization\n",
+    "Confusion Matrix:\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Confusion matrix\n",
+    "cm = confusion_matrix(y_test_fake, y_pred_fake)\n",
+    "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
+    "plt.title('Confusion Matrix for Fake Reviews')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Visualizing Feature Importance:\n",
+    "\n",
+    "# Get feature importances for logistic regression\n",
+    "importance = np.abs(model_fake.coef_[0])\n",
+    "feature_names = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "# Sort feature importance and plot\n"
+   ]
   }
  ],
  "metadata": {
