--- a/ShanShan_notebooks/data_modeling_and_evaluation.ipynb
+++ b/ShanShan_notebooks/data_modeling_and_evaluation.ipynb
@@ -17,6 +17,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TF-IDF: Naive Bayes, Logistic Regression, Gradient Boosting, Adaboost, XGBoost, Random Forest\n",
+    "\n",
+    "# word2vec: Logistic Regression, Gradient Boosting, Adaboost, XGBoost, Random Forest\n",
+    "\n",
+    "# Tokenization: Bert, Roberta, LSTM\n",
+    "\n",
+    "# Fine-tune: RandomizedSearch\n",
+    "\n",
+    "\n",
+    "# tf-idf, word2vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf-idf, balancing, modeling\n",
+    "\n",
+    "scaling, dimensionality reduction, "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
