--- a/ShanShan_notebooks/data_modeling_and_evaluation.ipynb
+++ b/ShanShan_notebooks/data_modeling_and_evaluation.ipynb
@@ -1146,7 +1146,226 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, precision_score, recall_score, f1_score, roc_auc_score,\n",
+    "    classification_report, confusion_matrix, roc_curve, RocCurveDisplay\n",
+    ")\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import GradientBoostingClassifier, AdaBoostClassifier, RandomForestClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "# Placeholder for training and testing datasets\n",
+    "# Replace these with your actual datasets\n",
+    "X_train_merged = np.random.rand(1000, 20)  # Dummy data for illustration\n",
+    "y_train_merged = np.random.randint(0, 2, 1000)\n",
+    "X_test_merged = np.random.rand(300, 20)\n",
+    "y_test_merged = np.random.randint(0, 2, 300)\n",
+    "\n",
+    "# Define models with default parameters\n",
+    "models = {\n",
+    "    \"Naive Bayes\": MultinomialNB(),\n",
+    "    \"Logistic Regression\": LogisticRegression(),\n",
+    "    \"Gradient Boosting\": GradientBoostingClassifier(),\n",
+    "    \"AdaBoost\": AdaBoostClassifier(),\n",
+    "    \"XGBoost\": XGBClassifier(use_label_encoder=False, eval_metric='logloss'),\n",
+    "    \"Random Forest\": RandomForestClassifier()\n",
+    "}\n",
+    "\n",
+    "# DataFrames to store performance metrics\n",
+    "results = []\n",
+    "\n",
+    "# Loop through models to train, evaluate, and visualize\n",
+    "for model_name, model in models.items():\n",
+    "    print(f\"Training and evaluating: {model_name}\")\n",
+    "\n",
+    "    # Duplicate datasets for reuse\n",
+    "    X_train_dup = X_train_merged.copy()\n",
+    "    y_train_dup = y_train_merged.copy()\n",
+    "    X_test_dup = X_test_merged.copy()\n",
+    "    y_test_dup = y_test_merged.copy()\n",
+    "    \n",
+    "    # Fit the model\n",
+    "    model.fit(X_train_dup, y_train_dup)\n",
+    "    \n",
+    "    # Predict on test set\n",
+    "    y_pred = model.predict(X_test_dup)\n",
+    "    y_prob = model.predict_proba(X_test_dup)[:, 1]\n",
+    "    \n",
+    "    # Calculate metrics\n",
+    "    accuracy = accuracy_score(y_test_dup, y_pred)\n",
+    "    precision = precision_score(y_test_dup, y_pred)\n",
+    "    recall = recall_score(y_test_dup, y_pred)\n",
+    "    f1 = f1_score(y_test_dup, y_pred)\n",
+    "    auc_score = roc_auc_score(y_test_dup, y_prob)\n",
+    "    report = classification_report(y_test_dup, y_pred)\n",
+    "    cm = confusion_matrix(y_test_dup, y_pred)\n",
+    "    \n",
+    "    # Save metrics\n",
+    "    results.append({\n",
+    "        \"Model\": model_name,\n",
+    "        \"Accuracy\": accuracy,\n",
+    "        \"Precision\": precision,\n",
+    "        \"Recall\": recall,\n",
+    "        \"F1-Score\": f1,\n",
+    "        \"AUC\": auc_score,\n",
+    "        \"Classification Report\": report,\n",
+    "        \"Confusion Matrix\": cm\n",
+    "    })\n",
+    "    \n",
+    "    # Print classification report\n",
+    "    print(f\"\\nClassification Report for {model_name}:\\n\")\n",
+    "    print(report)\n",
+    "    \n",
+    "    # Plot confusion matrix\n",
+    "    plt.figure(figsize=(6, 5))\n",
+    "    sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False, \n",
+    "                xticklabels=[\"Negative\", \"Positive\"], yticklabels=[\"Negative\", \"Positive\"])\n",
+    "    plt.title(f\"Confusion Matrix for {model_name}\")\n",
+    "    plt.xlabel(\"Predicted Label\")\n",
+    "    plt.ylabel(\"True Label\")\n",
+    "    plt.show()\n",
+    "\n",
+    "# Plot ROC-AUC curves\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "colors = ['blue', 'green', 'red', 'orange', 'purple', 'brown']\n",
+    "for idx, (model_name, model) in enumerate(models.items()):\n",
+    "    y_prob = model.predict_proba(X_test_merged)[:, 1]\n",
+    "    fpr, tpr, _ = roc_curve(y_test_merged, y_prob)\n",
+    "    auc_score = roc_auc_score(y_test_merged, y_prob)\n",
+    "    \n",
+    "    RocCurveDisplay(fpr=fpr, tpr=tpr, roc_auc=auc_score, estimator_name=model_name).plot(ax=plt.gca(), \n",
+    "                                                                                         color=colors[idx], \n",
+    "                                                                                         label=f\"{model_name} (AUC={auc_score:.2f})\")\n",
+    "\n",
+    "# Customize the plot\n",
+    "plt.title(\"ROC-AUC Curves for Models\")\n",
+    "plt.xlabel(\"False Positive Rate\")\n",
+    "plt.ylabel(\"True Positive Rate\")\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.grid(alpha=0.3)\n",
+    "plt.show()\n",
+    "\n",
+    "# Display results as a DataFrame\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(\"\\nOverall Results Summary:\")\n",
+    "print(results_df[[\"Model\", \"Accuracy\", \"Precision\", \"Recall\", \"F1-Score\", \"AUC\"]])\n",
+    "\n",
+    "# --------------------------------------------------------------------\n",
+    "# Hyperparameter Tuning Section\n",
+    "\n",
+    "# Define hyperparameter grids for each model\n",
+    "param_grids = {\n",
+    "    \"Naive Bayes\": {},  # No hyperparameters for Naive Bayes in this context\n",
+    "    \"Logistic Regression\": {\n",
+    "        \"solver\": [\"newton-cg\", \"lbfgs\", \"liblinear\"],\n",
+    "        \"C\": np.logspace(-4, 4, 20),\n",
+    "        \"max_iter\": [100, 200, 500]\n",
+    "    },\n",
+    "    \"Gradient Boosting\": {\n",
+    "        \"n_estimators\": [50, 100, 200],\n",
+    "        \"learning_rate\": [0.01, 0.1, 0.2],\n",
+    "        \"max_depth\": [3, 5, 7],\n",
+    "    },\n",
+    "    \"AdaBoost\": {\n",
+    "        \"n_estimators\": [50, 100, 200],\n",
+    "        \"learning_rate\": [0.5, 1.0, 1.5]\n",
+    "    },\n",
+    "    \"XGBoost\": {\n",
+    "        \"n_estimators\": [50, 100, 200],\n",
+    "        \"learning_rate\": [0.01, 0.1, 0.2],\n",
+    "        \"max_depth\": [3, 5, 7]\n",
+    "    },\n",
+    "    \"Random Forest\": {\n",
+    "        \"n_estimators\": [50, 100, 200],\n",
+    "        \"max_depth\": [None, 10, 20],\n",
+    "        \"min_samples_split\": [2, 5, 10]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Perform Randomized Search and evaluate\n",
+    "def run_with_tuning(models, param_grids):\n",
+    "    tuned_results = []\n",
+    "    for model_name, model in models.items():\n",
+    "        print(f\"\\nTuning and evaluating: {model_name}\")\n",
+    "        \n",
+    "        # RandomizedSearchCV for hyperparameter tuning\n",
+    "        if param_grids[model_name]:\n",
+    "            search = RandomizedSearchCV(\n",
+    "                estimator=model,\n",
+    "                param_distributions=param_grids[model_name],\n",
+    "                n_iter=20,\n",
+    "                scoring='roc_auc',\n",
+    "                cv=3,\n",
+    "                verbose=1,\n",
+    "                random_state=42\n",
+    "            )\n",
+    "            search.fit(X_train_merged, y_train_merged)\n",
+    "            best_model = search.best_estimator_\n",
+    "            print(f\"Best parameters for {model_name}: {search.best_params_}\")\n",
+    "        else:\n",
+    "            best_model = model\n",
+    "            best_model.fit(X_train_merged, y_train_merged)\n",
+    "        \n",
+    "        # Predictions and metrics\n",
+    "        y_pred = best_model.predict(X_test_merged)\n",
+    "        y_prob = best_model.predict_proba(X_test_merged)[:, 1]\n",
+    "        \n",
+    "        accuracy = accuracy_score(y_test_merged, y_pred)\n",
+    "        precision = precision_score(y_test_merged, y_pred)\n",
+    "        recall = recall_score(y_test_merged, y_pred)\n",
+    "        f1 = f1_score(y_test_merged, y_pred)\n",
+    "        auc_score = roc_auc_score(y_test_merged, y_prob)\n",
+    "        report = classification_report(y_test_merged, y_pred)\n",
+    "        cm = confusion_matrix(y_test_merged, y_pred)\n",
+    "        \n",
+    "        # Save results\n",
+    "        tuned_results.append({\n",
+    "            \"Model\": model_name,\n",
+    "            \"Accuracy\": accuracy,\n",
+    "            \"Precision\": precision,\n",
+    "            \"Recall\": recall,\n",
+    "            \"F1-Score\": f1,\n",
+    "            \"AUC\": auc_score,\n",
+    "            \"Classification Report\": report,\n",
+    "            \"Confusion Matrix\": cm\n",
+    "        })\n",
+    "        \n",
+    "        # Print classification report\n",
+    "        print(f\"\\nClassification Report for {model_name}:\\n\")\n",
+    "        print(report)\n",
+    "        \n",
+    "        # Plot confusion matrix\n",
+    "        plt.figure(figsize=(6, 5))\n",
+    "        sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False,\n",
+    "                    xticklabels=[\"Negative\", \"Positive\"], yticklabels=[\"Negative\", \"Positive\"])\n",
+    "        plt.title(f\"Confusion Matrix for {model_name}\")\n",
+    "        plt.xlabel(\"Predicted Label\")\n",
+    "        plt.ylabel(\"True Label\")\n",
+    "        plt.show()\n",
+    "    \n",
+    "    # Plot ROC-AUC curves\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    colors = ['blue', 'green', 'red', 'orange', 'purple', 'brown']\n",
+    "    for idx, result in enumerate(tuned_results):\n",
+    "        fpr, tpr, _ = roc_curve(y_test_merged, models[result[\"Model\"]].predict_proba(X_test_merged)[:, 1])\n",
+    "        RocCurveDisplay(fpr=fpr, tpr=tpr, roc_auc=result[\"AUC\"], estimator_name=result[\"Model\"]).plot(ax=plt.gca(),\n",
+    "                                                                                                    color=colors[idx],\n",
+    "                                                                                                    label=f\"{result['Model']} (AUC={result['AUC']:.2f})\")\n",
+    "    \n",
+    "    # Customize ROC plot\n",
+    "    plt.title(\"ROC-AUC Curves for Models (After Tuning)\")\n",
+    "    plt.xlabel(\"False Positive Rate\")\n",
+    "    plt.ylabel(\"True Positive Rate\")\n",
+    "    plt.legend(loc=\"lower right\")\n",
+    "    plt.grid(alpha=\n"
+   ]
   },
   {
    "cell_type": "code",
